<resources>
    <string name="app_name">WhatAEat!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity Level</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="measurements">Measurements</string>
    <string name="metric">Kilograms</string>
    <string name="imperial">Pounds</string>

    <string-array name="activity_level">
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days a week)</item>
        <item>Moderate exercise (3–5 days a week)</item>
        <item>Heavy exercise (6–7 days a week)</item>
        <item>Very heavy exercise (twice a day, extra heavy)</item>
    </string-array>

    <string-array name="weekly_goal">
        <item> loose</item>
        <item> gain</item>
    </string-array>

    <string-array name="weekly_goal_kg">
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
    </string-array>

    <string name="day">Day</string>
    <string name="month">Month</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="year">Year</string>
    <string name="in_kgs">in kgs</string>
    <string name="in_cm">in cm</string>
    <string name="signUp">Sign Up</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="todo">TODO</string>
    <string name="your_goals">Your Goals</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="kg_per_week">Kg per week</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="i_want_to">I want to</string>

    <string name="profile">Profile</string>
    <string name="goal">Goal</string>
    <string name="categories">Categories</string>
    <string name="food">Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="add_item">Add Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="name">Name</string>
    <string name="parent">Parent</string>
    <string name="save">Save</string>
    <string name="edit_item">Edit Item</string>
    <string name="calories">Calories</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="current_weight">Current Weight</string>
    <string name="method">Method</string>
    <string name="kg"> Kg</string>
    <string name="kg_week"> Kg Per Week</string>
    <string name="you_need_to_consume">You need to consume</string>
    <string name="breakfast">Breakfast</string>
    <string name="your_meals">Your Meals</string>
    <string name="category">Category</string>
    <string name="serving_in">Serving in </string>
    <string name="serving_in_gram">Serving in gram</string>
    <string name="add_to_food_diary">Add To Food Diary</string>
    <string name="pcs"> pcs</string>
    <string name="gram"> grams</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="lunch">Lunch</string>

</resources>