<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/your_goals"
            android:textAlignment="center"
            android:textSize="35sp" />

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textViewGoalError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <TextView
                android:id="@+id/textViewTargetWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:textSize="15sp"
                android:text="@string/target_weight" />

            <EditText
                android:id="@+id/editTextTargetWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:layout_marginLeft="7dp"
                android:hint="@string/in_kgs"
                android:inputType="number"
                android:autofillHints="Weight" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <TextView
                android:id="@+id/textViewGoalChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textSize="15sp"
                android:text="@string/i_want_to" />

            <Spinner
                android:id="@+id/spinnerIWantTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:entries="@array/weekly_goal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <TextView
                android:id="@+id/textViewWeeklyGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:textSize="15sp"
                android:text="@string/weekly_goal" />

            <Spinner
                android:id="@+id/spinnerWeeklyGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/weekly_goal_kg" />

            <TextView
                android:id="@+id/textViewKgPerWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_per_week" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp">

            <TextView
                android:id="@+id/textView01"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:textSize="15sp"
                android:text="" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_s_go"
                android:textAlignment="center"
                android:textSize="20sp" />

        </TableRow>

    </LinearLayout>
</ScrollView>