<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/sign_up_here"
            android:textAlignment="center"
            android:textSize="35sp" />
        
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Email-->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:autofillHints="Email Address"
                    tools:ignore="LabelFor" />
            </TableRow>
            <!--Email-->

            <!--DOB-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/textViewDOB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/date_of_birth" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <Spinner
                            android:id="@+id/spinnerDay"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />

                        <Spinner
                            android:id="@+id/spinnerMonth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/months" />

                        <Spinner
                            android:id="@+id/spinnerYear"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />
                    </TableRow>

                </TableLayout>

            </TableRow>
            <!--DOB-->

            <!--Gender-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">
                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/gender"
                    />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">
                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UselessParent">

                            <RadioButton
                                android:id="@+id/radioButtonMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="34dp"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/radioButtonFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                         </RadioGroup>
                     </TableRow>

                </TableLayout>
            </TableRow>
            <!--//Gender-->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/textViewHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height" />

                <EditText
                    android:id="@+id/editTextHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/in_cm"
                    android:inputType="number"
                    android:autofillHints="Height" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <TextView
                    android:id="@+id/textViewWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight" />

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/in_kgs"
                    android:inputType="number"
                    android:autofillHints="Weight" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <TextView
                    android:id="@+id/textViewActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_level" />

                <Spinner
                    android:id="@+id/spinnerActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/activity_level" />
            </TableRow>

            <!--Submit Button-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/textViewTargetWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </TableRow>

        </TableLayout>

        <!-- Name Label -->

    </LinearLayout>
</ScrollView>