<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".GoalFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/your_goals"
            android:textAlignment="center"
            android:textSize="35sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Current Weight-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/textViewEditCurrentWeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:paddingTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/current_weight" />

                <EditText
                    android:id="@+id/editTextEditCurrentWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/in_kgs"
                    android:inputType="number"
                    android:autofillHints="Weight" />


            </TableRow>
            <!--Current Weight-->

            <!--Target Weight-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/textViewTargetWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:paddingTop="10dp"
                    android:text="@string/target_weight"/>

                <EditText
                    android:id="@+id/editTextEditTargetWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/in_kgs"
                    android:inputType="number"
                    android:autofillHints="Weight" />

            </TableRow>
            <!--Target Weight-->

            <!--Method-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/textViewGoalChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:text="@string/i_want_to" />

                <Spinner
                    android:id="@+id/spinnerEditIWantTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:entries="@array/weekly_goal" />

            </TableRow>
            <!--Method-->

            <!--Weekly Goal-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <TextView
                    android:id="@+id/textViewWeeklyGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="10dp"
                    android:text="@string/weekly_goal" />

                <Spinner
                    android:id="@+id/spinnerEditWeeklyGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/weekly_goal_kg" />

                <TextView
                    android:id="@+id/textViewKgPerWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg_per_week" />
            </TableRow>
            <!--Weekly Goal-->

            <!--Activity level-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/textViewActivityLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:paddingTop="10dp"
                    android:text="@string/activity_level" />

                <Spinner
                    android:id="@+id/spinnerEditActivityLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/activity_level" />

            </TableRow>
            <!--Activity level-->

        </TableLayout>

        <!--Save Button-->
        <Button
            android:id="@+id/buttonGoalSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp" />
        <!--Save Button-->

    </LinearLayout>
</ScrollView>